<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="txt_title">My Nanodegree Apps</string>

    <string name="txt_popular_movies">Popular Movies</string>
    <string name="txt_stock_hawk">Stock Hawk</string>
    <string name="txt_build_it_bigger">Build it Bigger</string>
    <string name="txt_make_material">Make Your App Material</string>
    <string name="txt_go_ubiquitous">Go Ubiquitous</string>
    <string name="txt_capstone">Capstone</string>
    <string name="txt_msg_format">This button will launch my %s project</string>
</resources>
