<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:weightSum="7.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/txt_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnPopularMovies"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/txt_popular_movies"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/button_spacing"/>

        <Button
            android:id="@+id/btnStockHawk"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/txt_stock_hawk"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/button_spacing"/>

        <Button
            android:id="@+id/btnBuildItBigger"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/txt_build_it_bigger"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/button_spacing"/>

        <Button
            android:id="@+id/btnMakeYourAppMaterial"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/txt_make_material"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/button_spacing"/>

        <Button
            android:id="@+id/btnGoUbiquitous"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/txt_go_ubiquitous"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/button_spacing"/>

        <Button
            android:id="@+id/btnCapstone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/txt_capstone"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/button_spacing"/>

    </LinearLayout>

</ScrollView>
